Fix alignment of submit button on multi room search

--- a/src/styles/views/booking-widget.less
+++ b/src/styles/views/booking-widget.less
@@ -69,7 +69,7 @@ booking-widget {
       margin-bottom: 20px;
       margin-right: 16px;
       float: initial;
-      margin-left: calc(~'80% - 15.5px');
+      margin-left: calc(~'80% - 22px');
     }
   }
 
